--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Altellect – Venture Creation Reimagined</title>
   <!-- Favicon using Logo.png -->
-  <link rel="icon" type="image/png" href="assets/Logo.png" />
+  <link rel="icon" type="image/png" href="assets/fav-logo.png" />
 
   <!-- Roboto Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -21,7 +21,9 @@
 <header class="header">
   <div class="header-container container">
     <div class="logo-wrap">
-      <img src="assets/Logo.png" alt="Altellect" />
+      <a href="index.html">
+        <img src="assets/Logo.png" alt="Altellect" />
+      </a>
  
     </div>
 
