--- a/Apply-now.html
+++ b/Apply-now.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apply Now – Altellect</title>
-    <link rel="icon" type="image/png" href="assets/Logo.png" />
+    <link rel="icon" type="image/png" href="assets/fav-logo.png" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
@@ -15,7 +15,9 @@
 <header class="header-two">
     <div class="header-container container">
         <div class="logo-wrap">
-            <img src="assets/Logo.png" alt="Altellect" />
+                        <a href="index.html">
+                            <img src="assets/Logo.png" alt="Altellect" />
+                        </a>
         </div>
         <nav class="nav">
               <a href="index.html">Home</a>
