--- a/Privacy.html
+++ b/Privacy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy – Altellect</title>
-    <link rel="icon" type="image/png" href="assets/altellect-logo.png" />
+    <link rel="icon" type="image/png" href="assets/fav-logo.png" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
@@ -16,7 +16,9 @@
     <header class="header">
         <div class="header-container container">
             <div class="logo-wrap">
-                <img src="assets/Logo.png" alt="Altellect" />
+                                <a href="index.html">
+                                    <img src="assets/Logo.png" alt="Altellect" />
+                                </a>
             </div>
             <nav class="nav">
                     <a href="index.html">Home</a>
@@ -31,7 +33,7 @@
     </header>
 
 <!-- HERO (structure and style similar to about-us.html) -->
-<section class="about-hero" style="position:relative;background:url('assets/Privacy-Poicy-banner.png') center/cover no-repeat;min-height:380px;height:60vh;display:flex;align-items:flex-end;">
+<section class="about-hero" style="position:relative;background:url('assets/Privacy-Poicy-banner.png') center/cover no-repeat;display:flex;align-items:flex-end;">
   <div class="about-hero-overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;"></div>
   <div class="about-hero-content" style="position:relative;z-index:2;width:100%;display:flex;flex-direction:column;align-items:center;justify-content:center;padding-bottom:40px;">
 
