--- a/capital.html
+++ b/capital.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Altellect Capital</title>
-	<link rel="icon" type="image/png" href="assets/altellect-logo.png" />
+	<link rel="icon" type="image/png" href="assets/fav-logo.png" />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" />
@@ -17,7 +17,9 @@
 	<header class="header">
 		<div class="header-container container">
 			<div class="logo-wrap">
-				<img src="assets/Logo.png" alt="Altellect" />
+				<a href="index.html">
+				  <img src="assets/Logo.png" alt="Altellect" />
+				</a>
 			</div>
 			<nav class="nav">
 				<a href="index.html">Home</a>
@@ -34,7 +36,7 @@
 
 	<!-- HERO SECTION -->
 	<section class="capital-hero"
-		style="position:relative; background:url('assets/Altellect-Cap-Banner.png') center/cover no-repeat; min-height:380px; height:60vh; display:flex; align-items:flex-end;">
+		style="position:relative; background:url('assets/Altellect-Cap-Banner.png') center/cover no-repeat; display:flex; align-items:flex-end;height:70vh">
 		<div class="about-hero-overlay"
 			style="position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.32);"></div>
 		<div class="about-hero-content"
