--- a/carrers.html
+++ b/carrers.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Careers – Altellect</title>
-  <link rel="icon" type="image/png" href="assets/altellect-logo.png" />
+  <link rel="icon" type="image/png" href="assets/fav-logo.png" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
@@ -16,7 +16,9 @@
 <header class="header-two">
 	<div class="header-container container">
 		<div class="logo-wrap">
-			<img src="assets/Logo.png" alt="Altellect" />
+      <a href="index.html">
+        <img src="assets/Logo.png" alt="Altellect" />
+      </a>
 		</div>
 		<nav class="nav">
 			<a href="index.html">Home</a>
@@ -31,21 +33,21 @@
 </header>
 
 <!-- HERO/BANNER SECTION -->
-<section class="about-hero careers-hero" style="position:relative; background:url('assets/Careers-banner.png') center/cover no-repeat; min-height:420px; height:420px; display:flex; align-items:flex-end;">
+<section class="about-hero careers-hero" style="position:relative; background:url('assets/Careers-banner.png') center/cover no-repeat; display:flex; align-items:flex-end;">
   <div class="about-hero-overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;"></div>
   <div class="about-hero-content" style="position:relative;z-index:1;width:100%;height:100%;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;">
     <h1 class="about-hero-title" style="color:#fff;font-size:2rem;font-family:'Montserrat',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">Diverse Talent. Unified By Purpose.</h1>
   </div>
 </section>
-<main class="careers-main" style="background: #F2F2F2; padding-bottom:0;">
+<main class="careers-main" style="background: #F2F2F2; padding-top:50px";>
   <!-- Intro Section -->
-  <section class="careers-intro container" style="margin:40px auto 0 auto; display:flex; flex-wrap:wrap; background:#fff; box-shadow:0 2px 16px rgba(0,0,0,0.03); border-radius:0; position:relative; z-index:2;">
-    <div style="flex:1 1 340px; min-width:320px; padding:40px 32px 32px 40px; display:flex; flex-direction:column; justify-content:center;">
-      <div style="font-size:0.98rem; color:#222; font-weight:600; letter-spacing:0.5px; margin-bottom:10px;">CAREERS AT ALTELLECT</div>
-      <h2 style="font-size:2rem; font-family:'Roboto'; font-weight:700; margin:0 0 18px 0; line-height:1.2;">Come Build, Laugh, and Create With Us</h2>
-      <p style="font-size:1.08rem; color:#222; margin-bottom:18px;"> Imagine a workplace where brainstorms feel like jam sessions, victories are marked with cake, and the office itself feels more like a playground for ideas than a cubicle farm. That’s Altellect — where ambition and imagination sit side by side.<br/><br/> We’re a community of builders, dreamers, and doers who back each other up, share a laugh in between deadlines, and never miss a chance to celebrate a win (yes, cake included).</p>
+  <section class="careers-intro container" style=" display:flex; flex-wrap:wrap; background:#fff; box-shadow:0 2px 16px rgba(0,0,0,0.03); border-radius:0; position:relative; z-index:2;">
+    <div style="flex:1 1 340px; min-width:320px;  display:flex; flex-direction:column; justify-content:center;">
+      <div style="font-size:0.98rem; color:#222; font-weight:600; letter-spacing:0.5px; margin-top:10px;">CAREERS AT ALTELLECT</div>
+      <h2 style="font-size:24px; font-family:'Roboto'; font-weight:600;  ">Come Build, Laugh, and Create With Us</h2>
+      <p style="font-size:16px; color:#222;"> Imagine a workplace where brainstorms feel like jam sessions, victories are marked with cake, and the office itself feels more like a playground for ideas than a cubicle farm. That’s Altellect — where ambition and imagination sit side by side.<br/> We’re a community of builders, dreamers, and doers who back each other up, share a laugh in between deadlines, and never miss a chance to celebrate a win (yes, cake included).</p>
 
-      <div style="margin:18px 0 0 0;">
+      <div >
         <div style="font-weight:600;margin-bottom:8px;font-family: 'Roboto';"><b>Here’s what life at Altellect is about:</b></div>
     <ul class="custom-arrow-list">
   <li>Projects that make you proud…</li>
@@ -57,7 +59,7 @@
 
       </div>
     </div>
-    <div style="flex:1 1 340px; min-width:320px; display:flex; align-items:center; justify-content:center; padding:32px 32px 32px 0;">
+    <div style="flex:1 1 340px; min-width:320px; display:flex; align-items:center; justify-content:center;">
       <img src="assets/Careers-Img.png" alt="Careers at Altellect" style="width:100%; max-width:420px; border-radius:0; box-shadow:0 2px 16px rgba(0,0,0,0.07);">
     </div>
 	
@@ -65,7 +67,7 @@
 
   <!-- Belonging Statement -->
   <section style="text-align:center; background:#f7f7f7; padding:32px 0 0 0;">
-    <div style="font-size:1.18rem; font-weight:700; color:#111; max-width:900px; margin:0 auto 0 auto;">
+    <div style="font-size:24px; font-weight:700; color:#111; max-width:900px; padding: 20px; margin:0 auto 0 auto;">
       We don’t expect perfection; we welcome growth.<br>
       We don’t chase titles; we build trust. And most of all, we don’t believe in “fitting in” — we believe in belonging.
     </div>
@@ -120,9 +122,9 @@
   <!-- JOIN ALTELLECT SECTION (above CURRENT OPENINGS) -->
     <section class="careers-join-section" style="background:#f7f7f7; padding:0; margin:0; border:0; width:100%;">
       <div class="container" style="max-width:1100px; margin:0 auto; padding:0; text-align:center; border:0;">
-        <h3 style="text-align:center; font-family:'Montserrat',sans-serif; font-size:1.1rem; font-weight:600; letter-spacing:0.5px; color:#222; margin-bottom:10px; margin-top:0; padding-top:0;">JOIN ALTELLECT</h3>
-        <h2 style="text-align:center; font-family:'Montserrat',sans-serif; font-size:2rem; font-weight:700; color:#222; margin-bottom:16px; margin-top:0; padding-top:0;">More Than A Workplace</h2>
-        <div style="text-align:center; color:#222; font-size:1.08rem; max-width:700px; margin:0 auto 0 auto; font-family:'Roboto',sans-serif; padding-bottom:0;">Altellect is more than a workplace — it’s a launchpad, a community, and sometimes even a dance floor. If you’re ready to bring your ideas, your energy, and your whole self to work, we’re ready too.</div>
+        <h3 style="text-align:center; font-family:'roboto'; font-size:18px; font-weight:400; letter-spacing:0.5px; color:#222; margin-bottom:10px; margin-top:0; padding-top:50px;">JOIN ALTELLECT</h3>
+        <h2 style="text-align:center; font-family:'Roboto'; font-size:2rem; font-weight:700; color:#222; margin-bottom:16px; margin-top:0; padding-top:0;">More Than A Workplace</h2>
+        <div style="text-align:center; color:#000; font-size:14px; max-width:700px; margin:0 auto 0 auto; font-family:'Roboto',sans-serif; padding-bottom:0;">Altellect is more than a workplace — it’s a launchpad, a community, and sometimes even a dance floor. If you’re ready to bring your ideas, your energy, and your whole self to work, we’re ready too.</div>
       </div>
     </section>
 
@@ -335,7 +337,7 @@
 
       jobsTbody.innerHTML = '';
       if (filtered.length === 0) {
-        jobsTbody.innerHTML = '<tr><td colspan="3" style="text-align:center;color:#888;">No jobs found.</td></tr>';
+        jobsTbody.innerHTML = '<tr><td colspan="3" style="text-align:center;color:#000; ">No jobs found.</td></tr>';
         return;
       }
       filtered.forEach(job => {
