--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Contact Us – Altellect</title>
-	<link rel="icon" type="image/png" href="assets/altellect-logo.png" />
+	<link rel="icon" type="image/png" href="assets/fav-logo.png" />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" />
@@ -15,7 +15,9 @@
 <header class="header-two">
 	<div class="header-container container">
 		<div class="logo-wrap">
-			<img src="assets/Logo.png" alt="Altellect" />
+			<a href="index.html">
+			  <img src="assets/Logo.png" alt="Altellect" />
+			</a>
 		</div>
 		<nav class="nav">
 			<a href="index.html">Home</a>
@@ -32,7 +34,7 @@
 
 
 <!-- HERO/BANNER SECTION -->
-<section class="about-hero contact-hero" style="position:relative; background:url('assets/Contact-us-banner.png') center/cover no-repeat; min-height:340px; height:340px; display:flex; align-items:flex-end;">
+<section class="about-hero contact-hero" style="position:relative; background:url('assets/Contact-us-banner.png') center/cover no-repeat; display:flex; align-items:flex-end;">
 	<div class="about-hero-overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;"></div>
 	<div class="about-hero-content" style="position:relative;z-index:1;width:100%;height:100%;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;">
 		<h1 class="about-hero-title" style="color:#fff;font-size:2rem;font-family:'Montserrat',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">One Platform. Many Conversations.</h1>
@@ -98,7 +100,7 @@
  <section class="social-row" style="background:#f2f2f2; padding:32px 0; text-align:center;">
 	 <div style="display:flex; align-items:center; justify-content:center; gap:32px;">
 		 <span style="font-size:1.1rem; font-weight:600; color:#222;">Connect with us</span>
-		 <div style="width:150px; height:3px; background:#6A6A6A; border-radius:2px;"></div>
+		 <div style="width:150px; height:1px; background:#6A6A6A; border-radius:2px;"></div>
 		 <div class="icons" style="display:flex; gap:24px; align-items:center;">
 			 <img src="assets/Facebook-unit.png" alt="Facebook" style="height:32px;">
 			 <img src="assets/Insta-unit@2x.png" alt="Instagram" style="height:32px;">
@@ -127,9 +129,9 @@
 </section>
 </section>
 <section class="cta-wrap">
-  <div class="cta-inner" style="flex-direction: column; align-items: center; background: #fff; box-shadow: none; padding: 48px 0 40px 0; max-width: 100vw;">
+	<div class="cta-inner">
     <h2 class="cta-title" style="font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 32px; font-weight: 700; color: #111; margin-bottom: 32px; text-align: center;">Your Vision Deserves A Dedicated Partner.</h2>
-    <button class="cta-btn" style="background: #666; color: #fff; font-family: 'Roboto', 'Montserrat', Arial, sans-serif; font-size: 20px; font-weight: 700; padding: 12px 48px; border: none; border-radius: 0; box-shadow: none; letter-spacing: 1px;">LET’S CONNECT!</button>
+	<button class="cta-btn">LET’S CONNECT!</button>
   </div>
 </section>
 
