--- a/about-us.html
+++ b/about-us.html
@@ -37,7 +37,7 @@
 <section class="about-hero">
   <div class="about-hero-overlay"></div>
   <div class="about-hero-content">
-      <h1 class="about-hero-title" style="color:#fff;font-size:2rem;font-family:'Montserrat',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">One Ecosystem. Infinite Potential.</h1>
+      <h1 class="about-hero-title" style="color:#fff;font-size:2rem;font-family:'roboto';text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">One Ecosystem. Infinite Potential.</h1>
   </div>
 </section>
 
