--- a/Projects.html
+++ b/Projects.html
@@ -30,12 +30,16 @@
         <a class="join-btn" href="join.html">Join The Ecosystem</a>
     </div>
   </header>
-  <section style="position: relative; background: url('assets/Group 7860.png') center/cover no-repeat; min-height: 420px; height: 420px; display: flex; align-items: flex-end;">
-    <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
+  <section style="position: relative; background: url('assets/Group 7860.png') center/cover no-repeat; min-height: 70vh; height: 70vh; display: flex; align-items: flex-end;">
+    <div style="position: absolute; top: 0; left: 0; width: 100%; height:70vh;"></div>
     <div style="position: relative; z-index: 1; width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: flex-end; align-items: center;">
-      <h1 style="color: #fff; font-size: 1.7rem; font-family: 'Montserrat', sans-serif; text-align: center; width: 100%; text-shadow: 0 2px 16px rgba(0,0,0,0.25); margin: 0 0 40px 0;">Across Sectors, Built With Intent.</h1>
+      <h1 style="color: #fff; font-size: 1.7rem; font-family: 'Roboto'; text-align: center; width: 100%; text-shadow: 0 2px 16px rgba(0,0,0,0.25); margin: 0 0 40px 0;">Across Sectors, Built With Intent.</h1>
     </div>
   </section>
+
+
+
+
   <section class="ventures-section">
     <div class="ventures-headline">10+ Ventures. One Unified Growth Engine</div>
     <div class="ventures-desc">Altellect is actively building a suite of high-margin, high-trust businesses across strategic sectors..</div>
