--- a/Apply-now.html
+++ b/Apply-now.html
@@ -124,22 +124,24 @@
         </div>
         <div>
             <h5>Menu</h5>
-            <a href="#">Projects</a>
-            <a href="#">Altellect Capital</a>
-            <a href="#">Careers</a>
+            <a href="Projects.html">Projects</a>
+            <a href="capital.html">Altellect Capital</a>
+            <a href="carrers.html">Careers</a>
         </div>
         <div>
             <h5>Support</h5>
-            <a href="#">Contact Us</a>
+            <a href="contact.html">Contact Us</a>
         </div>
         <div>
             <h5>Company</h5>
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-
+            <a href="index.html">Home</a>
+            <a href="about-us.html">About Us</a>
+            <a href="join.html">Join The Ecosystem</a>
             <div class="socials">
-                <a href="#">f</a>
-                <a href="#">in</a>
+                <a href="https://facebook.com/altellect" target="_blank" title="Facebook"><img src="assets/Facebook-icon.png" alt="Facebook" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+                <a href="https://instagram.com/altellect.ventures/" target="_blank" title="Instagram"><img src="assets/Instagram-icon.png" alt="Instagram" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+                <a href="https://linkedin.com/company/altellect/?viewAsMember=true" target="_blank" title="LinkedIn"><img src="assets/Linkedin-icon.png" alt="LinkedIn" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+                <a href="https://wa.me/919820084506" target="_blank" title="WhatsApp"><img src="assets/Whatsapp-icon.png" alt="WhatsApp" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
             </div>
         </div>
     </div>
