--- a/contact.html
+++ b/contact.html
@@ -102,10 +102,10 @@
 		 <span style="font-size:1.1rem; font-weight:600; color:#222;">Connect with us</span>
 		 <div style="width:150px; height:1px; background:#6A6A6A; border-radius:2px;"></div>
 		 <div class="icons" style="display:flex; gap:24px; align-items:center;">
-			 <img src="assets/Facebook-unit.png" alt="Facebook" style="height:32px;">
-			 <img src="assets/Insta-unit@2x.png" alt="Instagram" style="height:32px;">
-			<img src="assets/Linkedin-unit.png" alt="LinkedIn" style="height:32px;">
-<img src="assets/Whatsapp-unit.png" alt="WhatsApp" style="height:32px;">
+			 <a href="https://facebook.com/altellect" target="_blank" title="Facebook"><img src="assets/Facebook-unit.png" alt="Facebook" style="height:32px;"></a>
+			 <a href="https://instagram.com/altellect.ventures/" target="_blank" title="Instagram"><img src="assets/Insta-unit@2x.png" alt="Instagram" style="height:32px;"></a>
+			 <a href="https://linkedin.com/company/altellect/?viewAsMember=true" target="_blank" title="LinkedIn"><img src="assets/Linkedin-unit.png" alt="LinkedIn" style="height:32px;"></a>
+			 <a href="https://wa.me/919820084506" target="_blank" title="WhatsApp"><img src="assets/Whatsapp-unit.png" alt="WhatsApp" style="height:32px;"></a>
 		 </div>
 		
 	 </div>
@@ -167,9 +167,9 @@
 			<a href="join.html">Join The Ecosystem</a>
 			<div class="socials">
 				   <a href="https://facebook.com/altellect" target="_blank" title="Facebook"><img src="assets/Facebook-icon.png" alt="Facebook" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
-				   <a href="https://instagram.com/altellect" target="_blank" title="Instagram"><img src="assets/Instagram-icon.png" alt="Instagram" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
-				   <a href="https://linkedin.com/company/altellect" target="_blank" title="LinkedIn"><img src="assets/Linkedin-icon.png" alt="LinkedIn" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
-				   <a href="https://wa.me/" target="_blank" title="WhatsApp"><img src="assets/Whatsapp-icon.png" alt="WhatsApp" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+				   <a href="https://instagram.com/altellect.ventures/" target="_blank" title="Instagram"><img src="assets/Instagram-icon.png" alt="Instagram" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+				   <a href="https://linkedin.com/company/altellect/?viewAsMember=true" target="_blank" title="LinkedIn"><img src="assets/Linkedin-icon.png" alt="LinkedIn" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
+				   <a href="https://wa.me/919820084506" target="_blank" title="WhatsApp"><img src="assets/Whatsapp-icon.png" alt="WhatsApp" style="width:16px;height:16px;object-fit:contain;vertical-align:middle;"></a>
 			</div>
 		</div>
 	</div>
