--- a/index.html
+++ b/index.html
@@ -226,6 +226,66 @@
   </div>
 </section>
 
+<!-- CONTACT US SECTION -->
+<section class="contact-section" style="background:#f8f8f8;padding:40px 0 0 0;">
+  <div class="container" style="max-width:900px;margin:auto;">
+    <h2 style="font-family:'Montserrat',Arial,sans-serif;font-size:2rem;font-weight:700;margin-bottom:16px;">Contact Us</h2>
+    <div style="display:flex;flex-wrap:wrap;gap:32px;align-items:flex-start;">
+      <div style="flex:1 1 300px;min-width:260px;">
+        <h4 style="margin-bottom:8px;">Get in touch</h4>
+        <p style="margin:0 0 8px 0;">Phone: <a href="tel:+919820084506" style="color:#222;text-decoration:none;font-weight:500;">098200 84506</a></p>
+        <p style="margin:0 0 8px 0;">Email: <a href="mailto:info@altellect.com" style="color:#222;text-decoration:none;font-weight:500;">info@altellect.com</a></p>
+        <div class="socials" style="margin-top:12px;">
+          <a href="https://facebook.com/altellect" target="_blank" title="Facebook"><img src="assets/Facebook-icon.png" alt="Facebook" style="width:24px;height:24px;margin-right:8px;"></a>
+          <a href="https://instagram.com/altellect.ventures/" target="_blank" title="Instagram"><img src="assets/Instagram-icon.png" alt="Instagram" style="width:24px;height:24px;margin-right:8px;"></a>
+          <a href="https://linkedin.com/company/altellect/?viewAsMember=true" target="_blank" title="LinkedIn"><img src="assets/Linkedin-icon.png" alt="LinkedIn" style="width:24px;height:24px;margin-right:8px;"></a>
+          <a href="https://wa.me/919820084506" target="_blank" title="WhatsApp"><img src="assets/Whatsapp-icon.png" alt="WhatsApp" style="width:24px;height:24px;margin-right:8px;"></a>
+        </div>
+      </div>
+      <div style="flex:2 1 400px;min-width:260px;">
+        <form id="quickContactForm" style="display:flex;flex-direction:column;gap:12px;">
+          <input type="text" name="name" placeholder="Your Name" required style="padding:10px;border:1px solid #ccc;border-radius:4px;">
+          <input type="email" name="email" placeholder="Your Email" required style="padding:10px;border:1px solid #ccc;border-radius:4px;">
+          <input type="text" name="phone" placeholder="Your Phone" style="padding:10px;border:1px solid #ccc;border-radius:4px;">
+          <textarea name="message" placeholder="Your Message" required style="padding:10px;border:1px solid #ccc;border-radius:4px;min-height:80px;"></textarea>
+          <button type="submit" style="background:#222;color:#fff;padding:12px 0;font-family:'Montserrat',Arial,sans-serif;font-size:1rem;font-weight:700;border:none;border-radius:4px;cursor:pointer;">Send Message</button>
+        </form>
+        <div id="quickContactMsg" style="margin-top:10px;font-size:1rem;"></div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<script>
+document.getElementById('quickContactForm').onsubmit = async function(e) {
+  e.preventDefault();
+  var form = e.target;
+  var msg = document.getElementById('quickContactMsg');
+  msg.textContent = 'Sending...';
+  try {
+    // Example: send to your backend API endpoint
+    let res = await fetch('http://51.20.5.188:8002/api/contact/', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        name: form.name.value,
+        email: form.email.value,
+        phone: form.phone.value,
+        message: form.message.value
+      })
+    });
+    if (res.ok) {
+      msg.textContent = 'Thank you! We will get in touch soon.';
+      form.reset();
+    } else {
+      msg.textContent = 'There was an error. Please try again.';
+    }
+  } catch {
+    msg.textContent = 'There was an error. Please try again.';
+  }
+};
+</script>
+
 <!-- FOOTER -->
 <footer class="footer">
   <div class="container footer-grid">
