--- a/Apply-now.html
+++ b/Apply-now.html
@@ -115,7 +115,7 @@
 <footer class="footer">
     <div class="container footer-grid">
         <div class="footer-brand">
-            <img src="assets/logo.png" alt="Altellect Logo" class="footer-logo" />
+            <img src="assets/Logo.png" alt="Altellect Logo" class="footer-logo" />
             <p>
                 801, 8th Floor, Sea Breeze Building,<br>
                 Century Bazaar, Prabhadevi, Mumbai,<br>
