--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ document.getElementById('quickContactForm').onsubmit = async function(e) {
     
     <!-- LOGO + ADDRESS -->
     <div class="footer-brand">
-      <img src="assets/logo.png" alt="Altellect Logo" class="footer-logo" />
+      <img src="assets/Logo.png" alt="Altellect Logo" class="footer-logo" />
       <p>
         801, 8th Floor, Sea Breeze Building,<br>
         Century Bazaar, Prabhadevi, Mumbai,<br>
