--- a/carrers.html
+++ b/carrers.html
@@ -59,8 +59,8 @@
 
       </div>
     </div>
-    <div style="flex:1 1 340px; min-width:320px; display:flex; align-items:center; justify-content:center;">
-      <img src="assets/Careers-Img.png" alt="Careers at Altellect" style="width:100%; max-width:420px; border-radius:0; box-shadow:0 2px 16px rgba(0,0,0,0.07);">
+    <div style="flex:1 1 340px;  display:flex; align-items:center; justify-content:center;">
+      <img src="assets/Careers-Img.png" alt="Careers at Altellect" style="width:100%;margin-left:40px; border-radius:0; box-shadow:0 2px 16px rgba(0,0,0,0.07);">
     </div>
 	
   </section>
