--- a/about-us.html
+++ b/about-us.html
@@ -37,7 +37,7 @@
 <section class="about-hero">
   <div class="about-hero-overlay"></div>
   <div class="about-hero-content">
-      <h1 class="about-hero-title" style="color:#fff;font-size:2rem;font-family:'roboto';text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">One Ecosystem. Infinite Potential.</h1>
+      <h1 class="about-hero-title">One Ecosystem. Infinite Potential.</h1>
   </div>
 </section>
 
@@ -689,7 +689,7 @@ showSlides(0);
   <div class="container footer-grid">
     <!-- LOGO + ADDRESS -->
     <div class="footer-brand">
-      <img src="assets/logo.png" alt="Altellect Logo" class="footer-logo" />
+      <img src="assets/Logo.png" alt="Altellect Logo" class="footer-logo" />
       <p>
         801, 8th Floor, Sea Breeze Building,<br>
         Century Bazaar, Prabhadevi, Mumbai,<br>
