--- a/capital.html
+++ b/capital.html
@@ -35,15 +35,13 @@
 	</header>
 
 	<!-- HERO SECTION -->
-	<section class="capital-hero"
+	<section class="about-hero"
 		style="position:relative; background:url('assets/Altellect-Cap-Banner.png') center/cover no-repeat; display:flex; align-items:flex-end;height:70vh">
 		<div class="about-hero-overlay"
 			style="position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.32);"></div>
 		<div class="about-hero-content"
 			style="position:relative;z-index:1;width:100%;height:100%;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;">
-			<h1 class="about-hero-title"
-				style="color:#fff;font-size:1.7rem;font-family:'Montserrat',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">
-				Investing in Enduring Masterpieces</h1>
+			<h1 class="about-hero-title">Investing in Enduring Masterpieces</h1>
 		</div>
 	</section>
 
