--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 <section class="about-hero contact-hero" style="position:relative; background:url('assets/Contact-us-banner.png') center/cover no-repeat; display:flex; align-items:flex-end;">
 	<div class="about-hero-overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;"></div>
 	<div class="about-hero-content" style="position:relative;z-index:1;width:100%;height:100%;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;">
-		<h1 class="about-hero-title" style="color:#fff;font-size:2rem;font-family:'Roboto';text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">One Platform. Many Conversations.</h1>
+		<h1 class="about-hero-title" >One Platform. Many Conversations.</h1>
 	</div>
 </section>
 
@@ -140,7 +140,7 @@
 	<div class="container footer-grid">
 		<!-- LOGO + ADDRESS -->
 		<div class="footer-brand">
-			<img src="assets/logo.png" alt="Altellect Logo" class="footer-logo" />
+			<img src="assets/Logo.png" alt="Altellect Logo" class="footer-logo" />
 			<p>
 				801, 8th Floor, Sea Breeze Building,<br>
 				Century Bazaar, Prabhadevi, Mumbai,<br>
