--- a/index.html
+++ b/index.html
@@ -217,14 +217,14 @@
 
 
 <!-- CTA BAR -->
-
-<!-- CTA BAR (Redesigned as per XD) -->
 <section class="cta-wrap">
-  <div class="cta-inner">
-    <h2 class="cta-title">Your Vision Deserves A Dedicated Partner.</h2>
-    <a href="contact.html" class="cta-btn">LET’S CONNECT!</a>
+  <div class="cta-inner" style="flex-direction: column; align-items: center; background: #fff; box-shadow: none; padding: 48px 0 40px 0; max-width: 100vw;">
+    <h2 class="cta-title" style="font-family: 'Roboto', 'Montserrat'; font-size: 32px; font-weight: 700; color: #111; margin-bottom: 32px; text-align: center;">Your Vision Deserves A Dedicated Partner.</h2>
+    <a href="contact.html" class="cta-btn" style="background: #666; color: #fff; font-family: 'Roboto', 'Montserrat'; font-size: 20px; font-weight: 700; padding: 12px 48px; border: none; border-radius: 0; box-shadow: none; letter-spacing: 1px; display: inline-block; text-align: center; text-decoration: none;">LET’S CONNECT!</a>
   </div>
 </section>
+<!-- CTA BAR (Redesigned as per XD) -->
+
 
 
 
