--- a/join.html
+++ b/join.html
@@ -87,7 +87,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <section class="about-hero join-hero" style="position:relative; background:url('assets/Ecosystem-banner@2x.png') center/cover no-repeat; display:flex; align-items:flex-end;">
             <div class="about-hero-overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;"></div>
             <div class="about-hero-content" style="position:relative;z-index:1;width:100%;height:100%;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;">
-                <h1 class="about-hero-title" style="color:#fff;font-size:2rem;font-family:'Roboto',sans-serif;text-align:center;width:100%;text-shadow:0 2px 16px rgba(0,0,0,0.25);margin:0 0 40px 0;">Founders, Capital and Leadership.</h1>
+                <h1 class="about-hero-title">Founders, Capital and Leadership.</h1>
             </div>
         </section>
 <main class="join-main">
