--- a/Privacy.html
+++ b/Privacy.html
@@ -80,7 +80,7 @@
     <div class="container footer-grid">
         <!-- LOGO + ADDRESS -->
         <div class="footer-brand">
-            <img src="assets/logo.png" alt="Altellect Logo" class="footer-logo" />
+            <img src="assets/Logo.png" alt="Altellect Logo" class="footer-logo" />
             <p>
                 801, 8th Floor, Sea Breeze Building,<br>
                 Century Bazaar, Prabhadevi, Mumbai,<br>
