--- a/Projects.html
+++ b/Projects.html
@@ -97,20 +97,14 @@
           <div class="venture-desc">End-to-end venture building, incubation, and long-term management models.</div>
         </div>
       </div>
-      <div class="venture-card horizontal-card">
-        <div class="venture-img-wrap"><img class="venture-icon" src="assets/Franchising.png" alt=""></div>
-        <div class="venture-content-wrap">
-          <div class="venture-title">Franchise, Roll-Up & Multi-Brand Platforms</div>
-          <div class="venture-desc">Replicable business formats and multi-brand aggregation plays with strong unit economics.</div>
-        </div>
-      </div>
+      
           <div class="venture-card horizontal-card">
         <div class="venture-img-wrap"><img class="venture-icon" src="assets/strategic-AdvisoryTransform.png" alt=""></div>
         <div class="venture-content-wrap">
           <div class="venture-title">Strategic Transformation & Enterprise Design
 
           </div>
-          <div class="venture-desc">Operating-model redesign, new-venture creation, and growth transformation for established businesses.</div>
+          <div class="venture-desc">Operating-model redesign and growth transformation for established businesses.</div>
         </div>
       </div>
     </div>
