--- a/about-us.html
+++ b/about-us.html
@@ -97,7 +97,7 @@
       <h3>Engineering Success Through Validation</h3>
       <div class="polygon"></div>
       <p class="box-text">
-        We curate and integrate the right expertise at the right stage, maintaining clear ownership and decision-making so ventures move with speed and clarity.
+        Venture creation is treated as a discipline. Ideas are tested early, assumptions are challenged, and only concepts with demonstrated market–product fit move forward — focusing capital, time, and talent where they matter most.
       </p>
   </div>
 </div>
@@ -358,7 +358,7 @@
         <div class="slide">
           <div class="leader-card">
             <div class="leader-img">
-              <img src="assets/Girish-Nair.png" alt="Girish Nair" />
+              <img src="assets/Avijit-Dutta.png" alt="Avijit Dutta" />
             </div>
             <div class="leader-info">
               <h3>Avijit Dutta</h3>
@@ -371,20 +371,7 @@
         </div>
 
         <!-- Slide 5 -->
-        <div class="slide">
-          <div class="leader-card">
-            <div class="leader-img">
-              <img src="assets/Rajesh-Chalke.png" alt="Rajesh" />
-            </div>
-            <div class="leader-info">
-              <h3>Raajesh Chalke</h3>
-              <span class="leader-title">Strategic Financial Advisor</span>
-              <div class="leader-dash"></div>
-              <p class="leader-exp">30+ Yrs Of Gobal Finance Leadership Exp.</p>
-              <p class="leader-journey"><strong>Professional Journey :</strong>Professional Journey :</p>
-            </div>
-          </div>
-        </div>
+        
 
         <!-- Slide 6 -->
         <div class="slide">
@@ -410,7 +397,7 @@
             </div>
             <div class="leader-info">
               <h3>Supriya Upadhyay</h3>
-              <span class="leader-title" style="color:#FDB913; display:inline-block; max-width:270px; line-height:1.2;">Head Of Technology &amp; AI Infrastructure Officer (CTAIO)</span>
+              <span class="leader-title" style="color:#FDB913; display:inline-block; max-width:270px; line-height:1.2;">Head Of Technology &amp; AI Infrastructure Officer</span>
               <div class="leader-dash"></div>
               <p class="leader-exp">17+ Yrs Of Strategic Leadership Exp.</p>
               <p class="leader-journey"><strong>Professional Journey :</strong> Bytur Motors Pvt Ltd, Siance Software Pvt. Ltd.</p>
@@ -426,7 +413,7 @@
             </div>
             <div class="leader-info">
               <h3>Nivedita Kannan</h3>
-              <span class="leader-title" style="color:#FDB913;">Chief Human Resource Officer</span>
+              <span class="leader-title" style="color:#FDB913;">Head of Human Resource Officer</span>
               <div class="leader-dash"></div>
               <p class="leader-exp">20+ Yrs Of Strategic Human Capital Leadership.</p>
               <p class="leader-journey"><strong>Professional Journey :</strong> The Loop , Mudrex , Hubilo.</p>
