--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         sustainable profitability and valuation growth.
       </p>
 
-      <button class="intro-btn">VIEW MORE</button>
+      <a href="about-us.html" class="intro-btn" style="display: inline-block; text-align: center; text-decoration: none;">VIEW MORE</a>
     </div>
 
     <!-- RIGHT STATS -->
