--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <p class="stat-label">Ecosystem Size</p>
 
         <div class="stat-row reverse">
-          <span class="stat-text">Expert Operators<br />& Advisors</span>
+          <span class="stat-text">Experts Operators Advisors</span>
           <span class="stat-number">500+</span>
         </div>
       </div>
