--- a/Projects.html
+++ b/Projects.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="projects.css" />
 </head>
 <body>
-  <header class="header">
+  <header class="header-two">
     <div class="header-container container">
       <div class="logo-wrap">
         <a href="index.html">
