--- a/about-us.html
+++ b/about-us.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <!-- HEADER -->
-  <header class="header">
+  <header class="header-two">
     <div class="header-container container">
       <div class="logo-wrap">
         <a href="index.html">
