--- a/capital.html
+++ b/capital.html
@@ -14,7 +14,7 @@
 <body>
 
 	<!-- HEADER (copied from index.html) -->
-	<header class="header">
+	<header class="header-two">
 		<div class="header-container container">
 			<div class="logo-wrap">
 				<a href="index.html">
