--- a/carrers.html
+++ b/carrers.html
@@ -13,7 +13,7 @@
 <body>
 
 <!-- HEADER (copied from index.html) -->
-<header class="header">
+<header class="header-three">
 	<div class="header-container container">
 		<div class="logo-wrap">
       <a href="index.html">
