--- a/about-us.html
+++ b/about-us.html
@@ -126,9 +126,16 @@
         
         </div>
         <div class="how-build-boxes" style="display:flex; flex-direction:row; justify-content:center; gap:32px; width:90%; max-width:1100px; z-index:2; position:relative;">
-          <div class="box" style="background:#464646; border-radius:0; box-shadow:none; padding:32px 18px 18px 18px; min-width:260px; max-width:340px; flex:1 1 0; text-align:center; font-family:'Roboto',Arial,sans-serif; font-size:1.15rem; font-weight:700; color:#FDB913; border:none; position:relative; margin:0; transition:box-shadow 0.2s; display:flex; flex-direction:column; align-items:center; justify-content:center;">
-            <h3 style="color:#FDB913; font-size:1.25rem; font-weight:700; margin-bottom:12px; margin-top:0; letter-spacing:0.01em;">An Integrated Venture Ecosystem</h3>
-         
+          <div class="box expandable-ecosystem" style="background:#464646; border-radius:0; box-shadow:none; padding:32px 18px 18px 18px; min-width:260px; max-width:340px; flex:1 1 0; text-align:center; font-family:'Roboto',Arial,sans-serif; font-size:1.15rem; font-weight:700; color:#FDB913; border:none; position:relative; margin:0; transition:box-shadow 0.2s; display:flex; flex-direction:column; align-items:center; justify-content:center; cursor:pointer;">
+            <div class="ecosystem-header" style="width:100%;display:flex;align-items:center;justify-content:center;gap:8px;">
+              <h3 style="color:#FDB913; font-size:1.25rem; font-weight:700; margin-bottom:12px; margin-top:0; letter-spacing:0.01em;flex:1;">An Integrated Venture Ecosystem</h3>
+              <span class="expand-arrow" style="display:inline-block;transition:transform 0.3s;font-size:1.2em;">▼</span>
+            </div>
+            <div class="ecosystem-expand-content" style="overflow:hidden;max-height:0;transition:max-height 0.4s cubic-bezier(.77,0,.18,1);background:#222;color:#FDB913;font-size:1rem;font-weight:400;margin-top:0;border-radius:0 0 6px 6px;padding:0 6px;">
+              <div style="padding:18px 4px 12px 4px;">
+                Each Altellect venture is built within a ready ecosystem of leadership, sector expertise, operators, capital, and execution capability — enabling early depth and scale without fragmentation.
+              </div>
+            </div>
           </div>
           <div class="box" style="background:#464646; border-radius:0; box-shadow:none; padding:32px 18px 18px 18px; min-width:260px; max-width:340px; flex:1 1 0; text-align:center; font-family:'Roboto',Arial,sans-serif; font-size:1.15rem; font-weight:700; color:#FDB913; border:none; position:relative; margin:0; transition:box-shadow 0.2s; display:flex; flex-direction:column; align-items:center; justify-content:center;">
             <h3 style="color:#FDB913; font-size:1.25rem; font-weight:700; margin-bottom:12px; margin-top:0; letter-spacing:0.01em;">Curated & Aggregated Expertise</h3>
